secp256k1-zkp-sys/secp_bindings.rs

extern "C" {
    #[doc = " Computes the sum of multiple positive and negative blinding factors."]
    #[doc = "  Returns 1: Sum successfully computed."]
    #[doc = "          0: Error. A blinding factor is larger than the group order"]
    #[doc = "             (probability for random 32 byte number < 2^-127). Retry with"]
    #[doc = "             different factors."]
    #[doc = "  In:     ctx:        pointer to a context object (cannot be NULL)"]
    #[doc = "          blinds:     pointer to pointers to 32-byte character arrays for blinding factors. (cannot be NULL)"]
    #[doc = "          n:          number of factors pointed to by blinds."]
    #[doc = "          npositive:       how many of the initial factors should be treated with a positive sign."]
    #[doc = "  Out:    blind_out:  pointer to a 32-byte array for the sum (cannot be NULL)"]
    pub fn secp256k1_zkp_pedersen_blind_sum(
        ctx: *const secp256k1_zkp_context,
        blind_out: *mut ::std::os::raw::c_uchar,
        blinds: *const *const ::std::os::raw::c_uchar,
        n: size_t,
        npositive: size_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Verify a tally of pedersen commitments"]
    #[doc = " Returns 1: commitments successfully sum to zero."]
    #[doc = "         0: Commitments do not sum to zero or other error."]
    #[doc = " In:     ctx:        pointer to a context object (cannot be NULL)"]
    #[doc = "         commits:    pointer to array of pointers to the commitments. (cannot be NULL if pcnt is non-zero)"]
    #[doc = "         pcnt:       number of commitments pointed to by commits."]
    #[doc = "         ncommits:   pointer to array of pointers to the negative commitments. (cannot be NULL if ncnt is non-zero)"]
    #[doc = "         ncnt:       number of commitments pointed to by ncommits."]
    #[doc = ""]
    #[doc = " This computes sum(commit[0..pcnt)) - sum(ncommit[0..ncnt)) == 0."]
    #[doc = ""]
    #[doc = " A pedersen commitment is xG + vA where G and A are generators for the secp256k1 group and x is a blinding factor,"]
    #[doc = " while v is the committed value. For a collection of commitments to sum to zero, for each distinct generator"]
    #[doc = " A all blinding factors and all values must sum to zero."]
    #[doc = ""]
    pub fn secp256k1_zkp_pedersen_verify_tally(
        ctx: *const secp256k1_zkp_context,
        commits: *const *const secp256k1_zkp_pedersen_commitment,
        pcnt: size_t,
        ncommits: *const *const secp256k1_zkp_pedersen_commitment,
        ncnt: size_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Sets the final Pedersen blinding factor correctly when the generators themselves"]
    #[doc = "  have blinding factors."]
    #[doc = ""]
    #[doc = " Consider a generator of the form A' = A + rG, where A is the \"real\" generator"]
    #[doc = " but A' is the generator provided to verifiers. Then a Pedersen commitment"]
    #[doc = " P = vA' + r'G really has the form vA + (vr + r')G. To get all these (vr + r')"]
    #[doc = " to sum to zero for multiple commitments, we take three arrays consisting of"]
    #[doc = " the `v`s, `r`s, and `r'`s, respectively called `value`s, `generator_blind`s"]
    #[doc = " and `blinding_factor`s, and sum them."]
    #[doc = ""]
    #[doc = " The function then subtracts the sum of all (vr + r') from the last element"]
    #[doc = " of the `blinding_factor` array, setting the total sum to zero."]
    #[doc = ""]
    #[doc = " Returns 1: Blinding factor successfully computed."]
    #[doc = "         0: Error. A blinding_factor or generator_blind are larger than the group"]
    #[doc = "            order (probability for random 32 byte number < 2^-127). Retry with"]
    #[doc = "            different values."]
    #[doc = ""]
    #[doc = " In:                 ctx: pointer to a context object"]
    #[doc = "                   value: array of asset values, `v` in the above paragraph."]
    #[doc = "                          May not be NULL unless `n_total` is 0."]
    #[doc = "         generator_blind: array of asset blinding factors, `r` in the above paragraph"]
    #[doc = "                          May not be NULL unless `n_total` is 0."]
    #[doc = "                 n_total: Total size of the above arrays"]
    #[doc = "                n_inputs: How many of the initial array elements represent commitments that"]
    #[doc = "                          will be negated in the final sum"]
    #[doc = " In/Out: blinding_factor: array of commitment blinding factors, `r'` in the above paragraph"]
    #[doc = "                          May not be NULL unless `n_total` is 0."]
    #[doc = "                          the last value will be modified to get the total sum to zero."]
    pub fn secp256k1_zkp_pedersen_blind_generator_blind_sum(
        ctx: *const secp256k1_zkp_context,
        value: *const u64,
        generator_blind: *const *const ::std::os::raw::c_uchar,
        blinding_factor: *const *mut ::std::os::raw::c_uchar,
        n_total: size_t,
        n_inputs: size_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Initialize a context for usage with Pedersen commitments."]
    pub fn secp256k1_zkp_rangeproof_context_initialize(ctx: *mut secp256k1_zkp_context);
}
extern "C" {
    #[doc = " Verify a proof that a committed value is within a range."]
    #[doc = " Returns 1: Value is within the range [0..2^64), the specifically proven range is in the min/max value outputs."]
    #[doc = "         0: Proof failed or other error."]
    #[doc = " In:   ctx: pointer to a context object, initialized for range-proof and commitment (cannot be NULL)"]
    #[doc = "       commit: the commitment being proved. (cannot be NULL)"]
    #[doc = "       proof: pointer to character array with the proof. (cannot be NULL)"]
    #[doc = "       plen: length of proof in bytes."]
    #[doc = "       extra_commit: additional data covered in rangeproof signature"]
    #[doc = "       extra_commit_len: length of extra_commit byte array (0 if NULL)"]
    #[doc = "       gen: additional generator 'h'"]
    #[doc = " Out:  min_value: pointer to a unsigned int64 which will be updated with the minimum value that commit could have. (cannot be NULL)"]
    #[doc = "       max_value: pointer to a unsigned int64 which will be updated with the maximum value that commit could have. (cannot be NULL)"]
    pub fn secp256k1_zkp_rangeproof_verify(
        ctx: *const secp256k1_zkp_context,
        min_value: *mut u64,
        max_value: *mut u64,
        commit: *const secp256k1_zkp_pedersen_commitment,
        proof: *const ::std::os::raw::c_uchar,
        plen: size_t,
        extra_commit: *const ::std::os::raw::c_uchar,
        extra_commit_len: size_t,
        gen: *const secp256k1_zkp_generator,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Verify a range proof proof and rewind the proof to recover information sent by its author."]
    #[doc = "  Returns 1: Value is within the range [0..2^64), the specifically proven range is in the min/max value outputs, and the value and blinding were recovered."]
    #[doc = "          0: Proof failed, rewind failed, or other error."]
    #[doc = "  In:   ctx: pointer to a context object, initialized for range-proof and Pedersen commitment (cannot be NULL)"]
    #[doc = "        commit: the commitment being proved. (cannot be NULL)"]
    #[doc = "        proof: pointer to character array with the proof. (cannot be NULL)"]
    #[doc = "        plen: length of proof in bytes."]
    #[doc = "        nonce: 32-byte secret nonce used by the prover (cannot be NULL)"]
    #[doc = "        extra_commit: additional data covered in rangeproof signature"]
    #[doc = "        extra_commit_len: length of extra_commit byte array (0 if NULL)"]
    #[doc = "        gen: additional generator 'h'"]
    #[doc = "  In/Out: blind_out: storage for the 32-byte blinding factor used for the commitment"]
    #[doc = "        value_out: pointer to an unsigned int64 which has the exact value of the commitment."]
    #[doc = "        message_out: pointer to a 4096 byte character array to receive message data from the proof author."]
    #[doc = "        outlen:  length of message data written to message_out."]
    #[doc = "        min_value: pointer to an unsigned int64 which will be updated with the minimum value that commit could have. (cannot be NULL)"]
    #[doc = "        max_value: pointer to an unsigned int64 which will be updated with the maximum value that commit could have. (cannot be NULL)"]
    pub fn secp256k1_zkp_rangeproof_rewind(
        ctx: *const secp256k1_zkp_context,
        blind_out: *mut ::std::os::raw::c_uchar,
        value_out: *mut u64,
        message_out: *mut ::std::os::raw::c_uchar,
        outlen: *mut size_t,
        nonce: *const ::std::os::raw::c_uchar,
        min_value: *mut u64,
        max_value: *mut u64,
        commit: *const secp256k1_zkp_pedersen_commitment,
        proof: *const ::std::os::raw::c_uchar,
        plen: size_t,
        extra_commit: *const ::std::os::raw::c_uchar,
        extra_commit_len: size_t,
        gen: *const secp256k1_zkp_generator,
    ) -> ::std::os::raw::c_int;
}
